# retaildemandx

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ci/: ci_smoke.py
docker/: entrypoint.sh
mlruns_backup_1759762922/0/: meta.yaml
mlruns_backup_1759762922/885305818833668314/: meta.yaml
mlruns_backup_1759762922/885305818833668314/1a5c32ef92334eb19f33560ea9da15ea/: meta.yaml
mlruns_backup_1759762922/885305818833668314/1a5c32ef92334eb19f33560ea9da15ea/metrics/: rmse_h01  rmse_h02  rmse_h03  rmse_h04  rmse_h05  rmse_h06  rmse_h07  rmse_h08  rmse_h09  rmse_h10  rmse_h11  rmse_h12  rmse_h13  rmse_h14  rmse_h15  rmse_h16  rmse_h17  rmse_h18  rmse_h19  rmse_h20  rmse_h21  rmse_h22  rmse_h23  rmse_h24  rmse_mean_h1_24  smape_h01  smape_h02  smape_h03  smape_h04  smape_h05  smape_h06  smape_h07  smape_h08  smape_h09  smape_h10  smape_h11  smape_h12  smape_h13  smape_h14  smape_h15  (+35 more)
mlruns_backup_1759762922/885305818833668314/1a5c32ef92334eb19f33560ea9da15ea/tags/: mlflow.source.git.commit  mlflow.source.name
mlruns_backup_1759762922/885305818833668314/7051b59db0fb4929a5df6b031bcb294c/: meta.yaml
mlruns_backup_1759762922/885305818833668314/dc74edacc8ab4e19878cc450cdb695b3/: meta.yaml
src/data/: ingest_synthetic.py  validate.py
src/features/: build_features.py
src/models/: evaluate.py  register.py  train.py
src/pipelines/: batch_forecast.py
src/serving/: app.py
tests/: test_imports.py
(+1 files in other folders)
